# haskell-functional-paradigm

./: .gitignore  README.md
Ecuations/: README.md  myapp.cabal
Ecuations/app/: Main.hs
Ecuations/data/: received.json
email-spam-classifier/: README.md  myapp.cabal
email-spam-classifier/app/: Main.hs
