cabal-version:      3.0

-- The name of the package.
name:               Ecuations

-- The package version.
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Ecuaciones 

-- A longer description of the package.
description:       
-- The license under which the package is released.
license:            MIT

-- The package author(s).
author:             Hector Martinez

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         hrmartinezv@unah.hn

-- A copyright notice.
copyright:          Hector 2024

build-type:         Simple

-- Common warnings
ghc-options: -Wall

executable myapp
    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Other library packages from which modules are imported.
    build-depends:    base >= 4.7 && < 5,

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
