cabal-version:      3.0

-- The name of the package.
name:               EmailSpamClassifier

-- The package version.
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           A simple email spam classifier.

-- A longer description of the package.
description:        This package contains a spam classifier for emails using heuristics.

-- The license under which the package is released.
license:            MIT

-- The package author(s).
author:             Anner Henriquez

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         annerh3@gmail.com

-- A copyright notice.
copyright:          Anner 2024

build-type:         Simple

-- Common warnings
ghc-options: -Wall

executable myapp
    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Other library packages from which modules are imported.
    build-depends:    base >= 4.7 && < 5,
                      aeson >= 2.0 && < 3.0,
                      bytestring >= 0.10 && < 1.0

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
